core/tests/ui/store/derive_bridge_unit_variant.rs
use appdb::Bridge;

#[derive(Bridge)]
enum Dispatcher {
    Empty,
}

fn main() {}
